# api/v2/openapi.yaml
@@ -272,6 +272,28 @@ paths:
         '500':
           description: Internal server error
 
+  /virtualmachines/{vmId}/inspection:
+    delete:
+      tags: [Inspector]
+      summary: Cancel deep inspection for a specific VirtualMachine
+      operationId: cancelVirtualMachineInspection
+      parameters:
+        - name: vmId
+          in: path
+          required: true
+          description: VirtualMachine ID
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Inspection canceled for the VirtualMachine
+        '400':
+          description: Inspector not running
+        '404':
+          description: VirtualMachine not found in inspection queue
+        '500':
+          description: Internal server error
+
   /virtualmachines/{vmId}/utilization:
     get:
       tags: [Rightsizing]
